Release Notes

* 2/10/2016
  * removed T1 constraint from AtlasPJB for high prio or scouts  

* 2/9/2016
  * added nokill to reassignTask

* 2/8/2016
  * added network weights to brokerage

* 2/4/2016
  * fixed ToBeProcessed to correctly read secondary files when multiple RAM requirements
  * changed finishTask to ignore failGoalUnreached
  * setting nucleus and eventService in jobSpec

* 2/3/2016
  * fixed MIDDLENAME for multi fileds of addNthFieldOfInDSToLFN
  * changed AtlasPTB to use any nuclei where input is available when no nuclei can run jobs

* 2/1/2016
  * added reassignTaskToNucleus
  * fixed insertFilesForDataset_JEDI for ready->defined in scout

* 1/30/2016
  * changed log messages of AtlasPTB to be compatible with bamboo

* 1/27/2016
  * changed AtlasPTB to get messages from AtlasPJB

* 1/25/2016
  * changed addNthFieldToLFN to allow multiple fields

* 1/19/2016
  * changed AtlasPP to set lifetime to failed log datasets 
  * fixed getAnalSitesWithData to ignore STAGING

* 1/18/2016
  * changed getScoutJobData to reduce baseWalltime when calculating cpuTime
  * changed TR to respect the boolean vale for failWhenGoalUnreached

* 1/15/2016
  * changed message type for WORLD taskbrokerage
  * setting maxWalltime to maxCpuCount for HS06
  * changed AtlasPJB to support 3 digits base releases

* 1/14/2016
  * changed setScoutJobData so that tasks go to exhausted when execution time is unexpectedly too long
  * removed TiersOfATLAS from AtlasDDM

* 1/5/2016
  * changed restartTasksForCF to restart ready tasks with defined DSs

* 12/31/2015
  * fixed CF to use nFilesForScout for toupdate in scouting

* 12/16/2015
  * changed restartTasksForCF to restart defined tasks with only ready DSs

* 12/15/2015
  * using roundi up for the brokerage as well
  * added protection against nFilesPerJob=0 and nEventsPerJob=0

* 12/9/2015
  * rounding up job.minramcount with 500MB chunks

* 12/8/2015
  * fixed PP to go finished instead of exhausted if goal is reached