@@ -1,6 +1,8 @@
 Release Notes
 
 * 2/10/2016
+  * fixed retryTask to correctly set status of secondary datasets
+  * fixed to register final datasets when internal merge is used
   * removed T1 constraint from AtlasPJB for high prio or scouts  
 
 * 2/9/2016
